--- a/CustomProject/CMakeLists.txt
+++ b/CustomProject/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 _add_package_VulkanSDK()
 _add_package_ImGUI()
 _add_nvpro_core_lib()
+_add_package_glm()
 
 message(STATUS "COPY ${CMAKE_CURRENT_SOURCE_DIR}/media  to  ${OUTPUT_PATH}")
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/media DESTINATION ${OUTPUT_PATH})
